--- a/metadata.yaml
+++ b/metadata.yaml
@@ -39,5 +39,6 @@ subjects:
 - !lcsh 'Science fiction'
 - !lcsh 'Interplanetary voyages -- Fiction'
 - !lcsh 'Mars (Planet) -- Fiction'
+- GITenberg
 title: Per luchtschip "De Argonaut" naar Mars
 url: http://www.gutenberg.org/ebooks/44510
